<resources>
    <string name="app_name">SalaryTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="salary_tracker">Salary Tracker</string>
    <string name="skip">Skip</string>
    <string name="nick_name">Nick Name</string>
    <string name="enter_your_salary">Your Salary</string>
    <string name="svaing_goals">whats Your Saving Goal ?</string>
    <string name="send">send</string>
    <string name="intro_of_register">Alright mate, were gonna sort out a few simple things here to help you track your salary and savings in a fun way. Just need you to fill in these bits: -</string>
    <string name="register_done">register is done</string>
    <string name="ok">Okay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Statics">statics</string>
    <string name="invoices">invoices</string>
    <string name="profile">profile</string>
    <string name="balance">balance</string>
    <string name="Expenses">Expenses</string>
    <string name="saving">saving</string>
    <string name="salary">salary</string>
    <string name="remaining">remaining</string>
    <string name="total">total</string>
    <string name="insert_your_first_invoice">Insert Your First Invoice</string>
    <string name="add_new_invoice">add new invoice</string>
    <string name="add_new_item">add new Item</string>
    <string name="done">done</string>
    <string name="item">item</string>
    <string name="price">price</string>
    <string name="type_invoice">invoice type</string>
    <string name="invoice_inserted_correctly">invoice inserted correctly</string>
    <string name="invalid_invoice">"you should complete all fields to insert an invoice "</string>
    <string name="please_enter_your_invoice_type">please enter your Invoice Type</string>
    <string name="okay">okay</string>
    <string name="all_fields_should_not_be_null">all fields should not be null or empty</string>
    <string name="user_update_correctly">user updated Correctly</string>
    <string name="edit_profile">Edit profile</string>
    <string name="night_mode">night mode</string>
    <string name="language">language</string>
    <string name="عربي">arabic</string>
    <string name="english">English</string>
    <string name="notification_times">notification times</string>
    <string name="update">update</string>
    <string name="update_invoice">Update Invoice</string>
    <string name="invoice_updated_correctly">invoice Updated Correctly</string>
    <string name="are_you_sure_about_delete_this_invoice">"are you sure about delete this Invoice "</string>
    <string name="cancel">cancel</string>
    <string name="yes_iam_sure">yes, iam sure</string>
    <string name="most_purchased">Most purchased</string>
    <string name="days">Days</string>
    <string name="categories">Categories</string>
</resources>