<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activites.EditProfile.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolBar"

            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/left_arrow_back_24"
            app:navigationIconTint="@color/white"
            >
<TextView
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/edit_profile"
    android:textAppearance="@style/CustomTextStyle"
    android:textColor="@color/white"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickName_container"
android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_name"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickName_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/salary_container"
            android:paddingVertical="8dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/salary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/salary_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notification_container"
            android:paddingVertical="8dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notification_times"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notification_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expected_container"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/svaing_goals"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expected_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_btn"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:text="@string/update"
            android:paddingVertical="12dp"
            android:textAppearance="@style/CustomTextStyle"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>