<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Fragments.profileFragment.ProfileFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.appbar.MaterialToolbar
        android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimary"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textAppearance="@style/CustomTextStyle"
                android:textColor="@color/white"
                android:layout_gravity="center"/>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
<androidx.constraintlayout.widget.ConstraintLayout
    app:layout_constraintTop_toBottomOf="@id/appbar"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    android:elevation="16dp"
    android:paddingHorizontal="16dp"
    >
<com.example.msareefapp.Ui.customeViews.CustomProfileCardView
    android:id="@+id/editProfile"
    android:paddingVertical="8dp"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardTittle="@string/edit_profile"
    app:cardIcon="@drawable/baseline_arrow"
    app:switch1="true"
    app:isIcon="true"
/>
    <com.example.msareefapp.Ui.customeViews.CustomProfileCardView
        android:id="@+id/nightMode"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/editProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardTittle="@string/night_mode"
        app:cardIcon="@drawable/baseline_arrow"
        app:switch1="false"
        app:isSwitch="true"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lan_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/nightMode"
        android:hint="@string/language"
        app:hintTextColor="?attr/colorPrimary"
        app:boxStrokeColor="?attr/colorPrimary"

        >
        <AutoCompleteTextView
            android:id="@+id/lan_Actv"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="?attr/colorPrimary"
            android:labelFor="@id/lan_til"
            android:inputType="none"
            />


    </com.google.android.material.textfield.TextInputLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>