<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:paddingTop="50dp"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        tools:context=".Ui.Activites.regestertion.RegisterActivity"
        android:weightSum="12">
        <TextView
            android:id="@+id/intro_of_register"
            android:paddingTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         style="@style/CustomTextStyle"

            android:textSize="18sp"

            tools:text="@string/intro_of_register"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_name"
            app:hintTextColor="?attr/colorPrimary"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/salary_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/enter_your_salary"
            app:hintTextColor="?attr/colorPrimary"
            android:layout_weight="1"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/salary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:inputType="number"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notification_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="عاوزنا نبعتلك اشعار كل قد اية ؟/ساعة "
            app:hintTextColor="?attr/colorPrimary"
            android:layout_weight="1"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notification_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/saving_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:hintEnabled="true"
            android:layout_weight="1"

            android:hint="@string/svaing_goals"
            app:hintTextColor="?attr/colorPrimary"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/saving_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.button.MaterialButton
    android:id="@+id/send_btn"
    android:paddingHorizontal="12dp"
    android:paddingVertical="12dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/send"
    android:textSize="18sp"
    />

    </LinearLayout>
</layout>