<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ui.Fragments.Inovice.InvoicesFragment">

        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextStyle"
                    android:textColor="@color/white"
                    android:text="@string/invoices"
                    android:textSize="25sp"
                    android:layout_gravity="center"/>

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/invoices_Rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/invoice_item"
            android:paddingBottom="?actionBarSize"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/addNewInvoice_fab"
            android:contentDescription="@string/add_new_invoice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"
            android:src="@drawable/baseline_playlist_add_24"
            android:backgroundTint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/insertInvoice_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/insert_your_first_invoice"
            android:textColor="@color/black_light"
            android:textSize="30sp"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>