<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addNewItem_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:paddingStart="35dp"
                    app:cornerRadius="15dp"
                    app:icon="@drawable/add_to_invoice_24"
                    app:iconGravity="textStart"
                    app:layout_constraintBottom_toTopOf="@id/done_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchasedItems_Rv"
                    app:layout_constraintVertical_bias="0.5"
                    tools:ignore="RtlSymmetry" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/purchasedItems_Rv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingVertical="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/type_Invoice"
                    tools:itemCount="5"
                    tools:listitem="@layout/enter_purchased_row" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/done_btn"
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorPrimary"
                    android:padding="8dp"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addNewItem_btn" />

                <TextView
                    android:id="@+id/appBar"
                    style="@style/CustomTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_new_invoice"
                    android:textColor="@color/black_light"
                    android:textSize="25sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_item"
                    android:textColor="@color/black_light"
                    app:layout_constraintBottom_toTopOf="@id/done_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/purchasedItems_Rv"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/dateTime_Tv"
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@tools:sample/date/mmddyy" />

                <TextView
                    android:id="@+id/dayTime_Tv"
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@tools:sample/date/day_of_week" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/type_Invoice"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:hint="@string/type_invoice"
                    android:paddingHorizontal="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appBar"
                    app:layout_constraintWidth_percent=".5"

                    >

                   <AutoCompleteTextView
                       android:id="@+id/autoCompleteInvoiceType"
                       android:paddingStart="16dp"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       tools:ignore="LabelFor,RtlSymmetry"
                       android:inputType="text"
                       android:editable="true"
                       android:textSize="18sp"
                       android:textColor="@color/black"

                       android:completionThreshold="1"
                       />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>